--- a/portfoliocasdebruijn/src/styles/homepage.css
+++ b/portfoliocasdebruijn/src/styles/homepage.css
@@ -2,23 +2,7 @@
 
 
 
-/**Nav**/
-nav{
-    padding-left: 30%;
-    padding-right: 30%;
-    align-items: center;
-    align-self: center;
-  }
-  
-  #navDiv{
-    
-    font-family: contralto-big, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    display: flex;
-    justify-content: space-between;
-  }
-  
+
   /**Mainpage**/
   
   #introTekst{
@@ -60,6 +44,11 @@ nav{
     font-size: 1.5vw;
     font-weight: 500;
     font-family: contralto-big, sans-serif;
+  }
+
+  .activeItem{
+    font-weight: 800;
+    text-decoration:underline;
   }
   
   
