--- a/portfoliocasdebruijn/src/styles/workpage.css
+++ b/portfoliocasdebruijn/src/styles/workpage.css
@@ -2,13 +2,22 @@
 #navigatieWork{
     display: flex;
     justify-content: center;
-}
-
-#navigatieWork p{padding:1%}
-
-#navigatieWork, #workTitle{
+  }
+  
+  #navigatieWork p{
+    padding:1%;
+    ;
+  
+  }
+  
+  #navigatieWork, #workTitle{
     text-align: center;
-}
+  }
+  
+  .navItem:hover{
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.421);
+    transition: 0.3s;
+  }
 
 /******General*******/
 
@@ -17,26 +26,41 @@
     flex-wrap: wrap;
     text-align: center;
     justify-content: center;
+    padding-left: 5%;
+    padding-right: 5%;
     
-  
 }
 .worksPost{
     margin:1%;
     background-color: rgb(221, 160, 85);
-    width: 40%;
-    height: auto;
+    width: 25%;
+    padding-bottom: 10%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+    border-radius:2%;
+    
 }
 
 p{
-    font-family: contralto-big, sans-serif;
-    
+    font-family: contralto-big, sans-serif;  
 }
 
 .worksTitles{
     font-weight: 800;
+    font-size: 2vw;
+    margin-bottom: 0;
+    color:white;
+    text-shadow: 0px 0px 20px black;
+    
 }
 .worksDescriptions{
+    padding-left: 5%;
+    padding-right: 5%;
     font-style: italic;
+    font-size: 0.8vw;
+    color:white;
+    text-shadow: 0px 0px 10px black;
 
 }
 .worksImages{
