--- a/portfoliocasdebruijn/src/styles/workpage.css
+++ b/portfoliocasdebruijn/src/styles/workpage.css
@@ -30,6 +30,9 @@
     padding-right: 5%;
     
 }
+#workContainer div{
+  cursor:pointer;
+}
 .worksPost{
     margin:1%;
     background-color: rgb(221, 160, 85);
@@ -39,6 +42,7 @@
     background-repeat: no-repeat;
     background-size: cover;  
     border-radius:2%;
+    position: relative;
     
 }
 
@@ -52,6 +56,7 @@ p{
     margin-bottom: 0;
     color:white;
     text-shadow: 0px 0px 20px black;
+    pointer-events: none;
     
 }
 .worksDescriptions{
@@ -61,6 +66,7 @@ p{
     font-size: 0.8vw;
     color:white;
     text-shadow: 0px 0px 10px black;
+    pointer-events: none;
 
 }
 .worksImages{
@@ -69,5 +75,24 @@ p{
 }
 .worksLinks{
     text-decoration: none;
-
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 5px black;
+    position: absolute;
+    bottom: 1%;
+    left: 1%;
+  padding: 1.5%;
+  border-radius: 2%;
+  align-items: center;
+  text-align: center;
+  cursor:pointer;
+    
+}
+.workLinkDiv{
+  cursor:pointer;
+  pointer-events:none;
+  height: 100%;
+  align-items:baseline;
+  text-align: center;
+  vertical-align: bottom;
+  
 }
