--- a/portfoliocasdebruijn/src/App.css
+++ b/portfoliocasdebruijn/src/App.css
@@ -104,9 +104,7 @@ body {
   height: 100vh;
   
 }
-#contactContainer{
-  height: 95vh;    
-}
+
 .subtitle{
   margin-bottom: 0;
   margin-top: 0%;
@@ -114,4 +112,9 @@ body {
   font-family: "RemboyRegular";
   font-weight: 500;
 }
-
+#contactContainer{
+  height: 95vh;    
+}
+#dataWorkPage{
+  height: 205vh;
+}
